--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,46 +3,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Notification</title>
+    <title>Notification Service</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            width: 100%;
+            max-width: 600px;
+            background: #fff;
+            padding: 20px 25px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            text-align: center;
+            color: #333;
+        }
+
+        label {
+            font-weight: bold;
+            margin-top: 10px;
+            display: block;
+            margin-bottom: 5px;
+            font-size: 0.9rem;
+        }
+
+        input, select, textarea, button {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+            box-sizing: border-box;
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        input:focus, select:focus, textarea:focus {
+            outline: none;
+            border-color: #007BFF;
+            box-shadow: 0 0 4px rgba(0, 123, 255, 0.2);
+        }
+
+        button {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        button:hover {
+            background-color: #218838;
+        }
+
+        .notifications-section {
+            margin-top: 20px;
+        }
+
+        .notifications-section h2 {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
-    <form id="notificationForm">
-        <label for="sender_id">Sender ID:</label>
-        <input type="text" id="sender_id" name="sender_id" required><br>
+    <div class="container">
+        <h1>Notification Service</h1>
+        <form id="notificationForm">
+            <label for="sender_email">Sender Email:</label>
+            <select id="sender_email" name="sender_email" required>
+                <!-- Options will be dynamically loaded -->
+            </select>
 
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="subject" required><br>
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject" required>
 
-        <label for="message">Message:</label>
-        <textarea id="message" name="message" required>Test notification message</textarea><br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
 
-        <label for="priority">Priority:</label>
-        <select id="priority" name="priority">
-            <option value="low">Low</option>
-            <option value="normal" selected>Normal</option>
-            <option value="high">High</option>
-        </select><br>
+            <label for="priority">Priority:</label>
+            <select id="priority" name="priority" required>
+                <option value="low">Low</option>
+                <option value="normal" selected>Normal</option>
+                <option value="high">High</option>
+            </select>
 
-        <label for="scheduled_at">Scheduled At:</label>
-        <input type="datetime-local" id="scheduled_at" name="scheduled_at" required><br>
+            <label for="scheduled_at">Scheduled At:</label>
+            <input type="datetime-local" id="scheduled_at" name="scheduled_at" required>
 
-        <button type="submit">Submit</button>
-    </form>
+            <label for="target_group_name">Target Group Name:</label>
+            <select id="target_group_name" name="target_group_name" required>
+                <!-- Options will be dynamically loaded -->
+            </select>
+
+            <button type="submit">Create Notification</button>
+        </form>
+
+        <div class="notifications-section">
+            <h2>Notifications</h2>
+            <!-- Notifications will be dynamically displayed here -->
+        </div>
+    </div>
 
     <script>
+        async function fetchOptions() {
+            try {
+                // Fetch sender emails
+                const senderResponse = await fetch('/api/users?role=sender,both');
+                if (!senderResponse.ok) throw new Error('Failed to fetch sender emails');
+                const senders = await senderResponse.json();
+                const senderSelect = document.getElementById('sender_email');
+                senders.forEach(email => {
+                    const option = document.createElement('option');
+                    option.value = email;
+                    option.textContent = email;
+                    senderSelect.appendChild(option);
+                });
+
+                // Fetch target group names
+                const groupResponse = await fetch('/api/target-groups');
+                if (!groupResponse.ok) throw new Error('Failed to fetch target groups');
+                const groupNames = await groupResponse.json();
+                const groupSelect = document.getElementById('target_group_name');
+                groupNames.forEach(name => {
+                    const option = document.createElement('option');
+                    option.value = name;
+                    option.textContent = name;
+                    groupSelect.appendChild(option);
+                });
+            } catch (error) {
+                alert('Error loading options: ' + error.message);
+            }
+        }
+
+        document.addEventListener('DOMContentLoaded', fetchOptions);
+
         document.getElementById('notificationForm').addEventListener('submit', async (e) => {
             e.preventDefault();
-            const formData = new FormData(e.target);
-            const data = Object.fromEntries(formData.entries());
 
-            const response = await fetch('/api/notifications', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(data),
-            });
+            try {
+                const formData = new FormData(e.target);
+                const data = Object.fromEntries(formData.entries());
 
-            const result = await response.json();
-            alert(JSON.stringify(result));
+                // POST notification data
+                const response = await fetch('/api/notifications', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(data),
+                });
+
+                const result = await response.json();
+                if (response.ok) {
+                    alert('Notification created successfully!');
+                } else {
+                    throw new Error(result.error || 'Unknown error occurred');
+                }
+            } catch (error) {
+                alert('Failed to create notification: ' + error.message);
+            }
         });
     </script>
 </body>
